fix[php]: loading screen alignment

--- a/css/lightbox.css
+++ b/css/lightbox.css
@@ -10,7 +10,6 @@
     height: 100%;
     overflow: auto;
     background-color: #2d2f4b;
-
     flex-direction: column;
     align-items: center;
     align-content: center;
@@ -21,17 +20,13 @@
 .modal h2 {
     margin: 10px 0 35px 0;
     font-size: 30px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    align-content: center;
-    justify-content: center;
 }
 
 .modal h4 {
-    margin: 10px 0 35px 0;
+    margin: 25px 0 35px 0;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     align-items: center;
     align-content: center;
     justify-content: center;
@@ -50,7 +45,7 @@
     background-color: #2d2f4b;
     width: 1100px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
     align-items: center;
     align-content: center;
